--- a/times.html
+++ b/times.html
@@ -28,8 +28,9 @@
         <h3>Pokémon Unite</h3>
         <p>Equipe competitiva focada em torneios nacionais e internacionais de Pokémon Unite.</p>
         <ul>
-          <li>Treinador: Jonathas</li>
-          <li>Jogadores: Vitor, Leal, Herbert, Romualdo, etc.</li>
+          <li>Coach: Lobo</li>
+          <li>Manager: Leone</li>
+          <li>Jogadores: Almeida, Leandro, Anúbis...</li>
         </ul>
       </div>
 
@@ -37,8 +38,8 @@
         <h3>Pokémon VGC</h3>
         <p>Time especializado em batalhas estratégicas no circuito oficial do Video Game Championships (VGC).</p>
         <ul>
-          <li>Treinador: Jonathas</li>
-          <li>Analista: Leal</li>
+          <li>Treinador: [Nome dos membros]</li>
+          <li>Analista: [Nome dos membros]</li>
         </ul>
       </div>
 
