--- a/contato.html
+++ b/contato.html
@@ -23,20 +23,11 @@
 
   <main>
     <h2>Fale Conosco</h2>
-    <p>Tem alguma dúvida, sugestão ou deseja entrar em contato com a equipe Guariní e-sport? Preencha o formulário abaixo:</p>
+    <p>Quer entrar em contato com a equipe Guariní e-sport? Preencha nosso formulário abaixo:</p>
 
-    <form action="mailto:seuemail@dominio.com" method="post" enctype="text/plain">
-      <label for="nome">Nome:</label><br>
-      <input type="text" id="nome" name="nome" required><br><br>
-
-      <label for="email">E-mail:</label><br>
-      <input type="email" id="email" name="email" required><br><br>
-
-      <label for="mensagem">Mensagem:</label><br>
-      <textarea id="mensagem" name="mensagem" rows="5" required></textarea><br><br>
-
-      <button type="submit">Enviar</button>
-    </form>
+    <a href="https://forms.gle/EwrvixftrxC5iez4A" target="_blank">
+      <button>Ir para o Formulário</button>
+    </a>
 
     <p>Ou fale conosco diretamente pelas <a href="https://linktr.ee/guariniesports" target="_blank">redes sociais</a>.</p>
   </main>
