--- a/contato.html
+++ b/contato.html
@@ -34,6 +34,7 @@
 
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
+    <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
   </footer>
 </body>
 </html>
