--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
     <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
+    <p>&copy;Created by: Lobo.</p>
   </footer>
 </body>
 </html>
