--- a/loja.html
+++ b/loja.html
@@ -50,6 +50,7 @@
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
     <p><a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">Conheça nossas redes sociais</a></p>
+    <p>Created by: Lobo</p>
   </footer>
 </body>
 </html>
