--- a/index.html
+++ b/index.html
@@ -3,60 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Site oficial da equipe Guariní e-sport, desde 2019 unindo força, estratégia e paixão pelos games.">
   <title>Guariní e-sport</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <h1>Guariní e-sport</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="#hero">Início</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#loja">Loja</a></li>
         <li><a href="times.html">Times</a></li>
-        <li><a href="loja.html">Loja</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section class="hero">
+    <section id="hero" class="hero">
       <h2>Seja bem-vindo à Guariní e-sport</h2>
       <p>Unindo força, estratégia e paixão pelos games desde 2019.</p>
     </section>
-  </main>
 
-  <main>
-    <section>
+    <section id="sobre">
       <h2>Sobre a Guariní</h2>
       <p>Na Guariní e-sport, nossa missão é fortalecer a paixão pelos jogos eletrônicos, proporcionando aos jogadores uma plataforma única para alcançar a excelência em um ambiente profissional.</p>
       <p>Fundados em 11 de Maio de 2019, somos uma equipe de jogadores apaixonados que se dedicam a se tornarem os melhores em suas disciplinas. O nome "Guariní" vem do Tupi-Guarani e significa "o que dá força", representando nossa identidade, força coletiva e espírito de superação.</p>
       <p>Mais do que competir, acreditamos em construir uma comunidade vibrante, engajada e em constante evolução. Atuamos com seriedade e amor pelos e-sports.</p>
     </section>
-  </main>
 
-  <main>
-    <h2>Loja Oficial</h2>
-    <section class="produtos">
-      <div class="produto">
-        <img src="camisa.jpg" alt="Camisa Guariní">
-        <h3>Camisa Oficial</h3>
-        <p>R$ 69,90</p>
-        <button>Comprar</button>
-      </div>
-      <div class="produto">
-        <img src="boné.jpg" alt="Boné Guariní">
-        <h3>Boné Guariní</h3>
-        <p>R$ 39,90</p>
-        <button>Comprar</button>
-      </div>
-      <div class="produto">
-        <img src="mousepad.jpg" alt="Mousepad Guariní">
-        <h3>Mousepad Gamer</h3>
-        <p>R$ 49,90</p>
-        <button>Comprar</button>
+    <section id="loja">
+      <h2>Loja Oficial</h2>
+      <div class="produtos">
+        <div class="produto">
+          <img src="camisa.jpg" alt="Camisa Guariní">
+          <h3>Camisa Oficial</h3>
+          <p>R$ 69,90</p>
+          <button class="btn-comprar">Comprar</button>
+        </div>
+        <div class="produto">
+          <img src="boné.jpg" alt="Boné Guariní">
+          <h3>Boné Guariní</h3>
+          <p>R$ 39,90</p>
+          <button class="btn-comprar">Comprar</button>
+        </div>
+        <div class="produto">
+          <img src="mousepad.jpg" alt="Mousepad Guariní">
+          <h3>Mousepad Gamer</h3>
+          <p>R$ 49,90</p>
+          <button class="btn-comprar">Comprar</button>
+        </div>
       </div>
     </section>
   </main>
