--- a/contato.html
+++ b/contato.html
@@ -10,13 +10,13 @@
 <body>
   <header>
     <h1>Guariní e-sport</h1>
-    <nav>
+    <nav aria-label="Menu principal">
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="times.html">Times</a></li>
         <li><a href="loja.html">Loja</a></li>
-        <li><a href="contato.html">Contato</a></li>
+        <li><a href="contato.html" class="ativo">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -25,16 +25,16 @@
     <h2>Fale Conosco</h2>
     <p>Quer entrar em contato com a equipe Guariní e-sport? Preencha nosso formulário abaixo:</p>
 
-    <a href="https://forms.gle/EwrvixftrxC5iez4A" target="_blank">
-      <button>Ir para o Formulário</button>
-    </a>
+    <p style="text-align:center; margin: 2rem 0;">
+      <a href="https://forms.gle/EwrvixftrxC5iez4A" target="_blank" rel="noopener noreferrer" class="btn-comprar">Ir para o Formulário</a>
+    </p>
 
-    <p>Ou fale conosco diretamente pelas <a href="https://linktr.ee/guariniesports" target="_blank">redes sociais</a>.</p>
+    <p>Ou fale conosco diretamente pelas <a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">redes sociais</a>.</p>
   </main>
 
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
-    <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
+    <p><a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">Conheça nossas redes sociais</a></p>
     <p>Created by: Lobo</p>
   </footer>
 </body>
