--- a/sobre.html
+++ b/sobre.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Conheça a história, missão e valores da equipe Guariní e-sport, referência nos jogos Pokémon e apaixonada por e-sports." />
   <title>Sobre a Guariní e-sport</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -59,6 +60,8 @@
         Aqui, acreditamos no poder da união e da força coletiva para enfrentar desafios e alcançar vitórias. Junte-se a nós, ajude a construir essa história e torne cada momento nos e-sports uma experiência inesquecível. Venha fazer parte do futuro da Guariní e-sport!
       </p>
     </section>
+
+    <p><a href="index.html" class="btn-comprar">Voltar para Início</a></p>
   </main>
 
   <footer>
