--- a/times.html
+++ b/times.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Conheça os times da Guariní e-sport, focados em Pokémon Unite, VGC, TCG e Pokémon GO, com jogadores e staff dedicados." />
   <title>Times | Guariní e-sport</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.png" type="image/png" />
@@ -14,7 +15,7 @@
       <ul>
         <li><a href="index.html">Início</a></li>
         <li><a href="sobre.html">Sobre</a></li>
-        <li><a href="times.html">Times</a></li>
+        <li><a href="times.html" class="ativo">Times</a></li>
         <li><a href="loja.html">Loja</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
@@ -23,7 +24,7 @@
 
   <main>
     <h2>Nossos Times</h2>
-    <section class="times">
+    <section class="times" style="background-color: rgba(0,0,0,0.6); padding: 20px; border-radius: 10px; max-width: 900px; margin: auto;">
       <div class="time">
         <h3>Pokémon Unite</h3>
         <p>Equipe competitiva focada em torneios nacionais e internacionais de Pokémon Unite.</p>
@@ -59,11 +60,15 @@
         </ul>
       </div>
     </section>
+
+    <p style="text-align:center; margin-top: 2rem;">
+      <a href="index.html" class="btn-comprar">Voltar para Início</a>
+    </p>
   </main>
 
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
-    <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
+    <p><a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">Conheça nossas redes sociais</a></p>
     <p>Created by: Lobo</p>
   </footer>
 </body>
