--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Guariní e-sport</h1>
     <nav>
       <ul>
-        <li><a href="index" class="ativo">In</a></li>
+        <li><a href="index" class="ativo">Início</a></li>
         <li><a href="sobre">Sobre</a></li>
         <li><a href="times.html">Times</a></li>
         <li><a href="loja">Loja</a></li>
