--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <button class="btn-comprar">Comprar</button>
         </div>
         <div class="produto">
-          <img src="boné.jpg" alt="Boné Guariní">
+          <img src="bone.jpg" alt="Boné Guariní">
           <h3>Boné Guariní</h3>
           <p>R$ 39,90</p>
           <button class="btn-comprar">Comprar</button>
