--- a/times.html
+++ b/times.html
@@ -29,9 +29,9 @@
         <h3>Pokémon Unite</h3>
         <p>Equipe competitiva focada em torneios nacionais e internacionais de Pokémon Unite.</p>
         <ul>
-          <li>Coach: Lobo</li>
-          <li>Manager: Leone</li>
-          <li>Jogadores: Almeida, Leandro, Anúbis...</li>
+          <li>Coach: Shad</li>
+          <li>Analista: GK1ng</li>
+          <li>Jogadores: Almeida, Leandro, Anúbis, Leone e Draco.</li>
         </ul>
       </div>
 
