--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <h1>Guariní e-sport</h1>
     <nav>
       <ul>
-        <li><a href="index" class="ativo">Início</a></li>
-        <li><a href="sobre">Sobre</a></li>
+        <li><a href="index.html" class="ativo">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
         <li><a href="times.html">Times</a></li>
-        <li><a href="loja">Loja</a></li>
+        <li><a href="loja.html">Loja</a></li>
         <li><a href="contato.html">Contato</a></li>
+        <li><a href="agenda.html">Agenda</a></li>
       </ul>
     </nav>
   </header>
