--- a/scrims-result.html
+++ b/scrims-result.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Resultados - Pokémon Unite</title>
-  <link rel="stylesheet" href="style.css" />
-  <!--<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">-->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     .hidden { display: none; }
     .logo-preview { max-width: 40px; max-height: 40px; }
   </style>
 </head>
-<body class="w-full h-full bg-cover bg-no-repeat bg-center h-screen overflow-hidden top-0 left-0 right-0 bottom-0" style="background-image: url(./images/backgrounds/index-background.png)">
+<body class="w-full h-full bg-cover bg-no-repeat bg-center h-screen overflow-hidden top-0 left-0 right-0 bottom-0" style="background-image: url(background.jpg)">
   <div class="max-w-3xl mx-auto p-4 rounded">
     <h1 class="text-3xl font-bold text-center mb-6 text-white">Resultados do Guariní</h1>
 
@@ -22,7 +21,7 @@
     </div>
 
     <div class="mb-4 flex flex-col md:flex-row gap-2 items-center">
-      <img src="./images/backgrounds/Guarini.png" alt="Guariní" class="w-16 h-16 object-contain" />
+      <img src="./logos/Guarini.png" alt="Guariní" class="w-16 h-16 object-contain" />
       <input id="placarMeuTime" type="number" placeholder="Placar Guariní" class="w-full p-2 border rounded text-black" />
       <span class="font-bold text-xl text-white">X</span>
       <input id="placarAdversario" type="number" placeholder="Placar Adversário" class="w-full p-2 border rounded text-black" />
