--- a/vodreview.html
+++ b/vodreview.html
@@ -41,7 +41,7 @@
 
         // Função para buscar os vídeos da playlist
         function fetchPlaylistVideos() {
-            const url = 'https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=4&playlistId=PLzKfK0OG4Cx29w7EIQH8c0Uf8YUGyvOv5&si=rnoqBqGr3-GyPupD&key=${apiKey}';
+            const url = 'https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=4&playlistId=PLYJf4nRLwPFt1T40kN_sePLvSTD4JWqqi&si=kVZp3vUkdY6BcyL6&key=${apiKey}';
 
             fetch(url)
                 .then(response => {
