--- a/times.html
+++ b/times.html
@@ -31,7 +31,8 @@
         <ul>
           <li>Coach: Shad</li>
           <li>Analista: GK1ng</li>
-          <li>Jogadores: Almeida, Leandro, Anúbis, Leone e Draco.</li>
+          <li>Manager: Leone</li>
+          <li>Jogadores: Almeida, Anúbis, Draxx, Deivid e Draco.</li>
         </ul>
       </div>
 
@@ -39,26 +40,28 @@
         <h3>Pokémon VGC</h3>
         <p>Time especializado em batalhas estratégicas no circuito oficial do Video Game Championships (VGC).</p>
         <ul>
-          <li>Treinador: [Nome dos membros]</li>
-          <li>Analista: [Nome dos membros]</li>
+          <li>Jogador: Lobo</li>
         </ul>
       </div>
 
       <div class="time">
-        <h3>Pokémon TCG</h3>
-        <p>Jogadores experientes no competitivo do card game Pokémon, participando de ligas e campeonatos.</p>
+        <h3>Yu-Gi-Oh! TCG</h3>
+        <p>Jogadores experientes no competitivo do card game de Yu-Gi-Oh!, participando de ligas e campeonatos.</p>
         <ul>
-          <li>Jogadores em destaque: [Nome dos membros]</li>
+          <li>Jogadores em destaque: Yagami</li>
         </ul>
       </div>
 
-      <div class="time">
-        <h3>Pokémon GO</h3>
-        <p>Equipe de elite para torneios PvP e eventos presenciais de Pokémon GO.</p>
-        <ul>
-          <li>Participações em: Copa Silph, eventos GO Battle League, etc.</li>
-        </ul>
-      </div>
+     <div class="time">
+  <h3>Streamers</h3>
+  <p>Equipe de Streamers parceiros.</p>
+  <ul>
+    <li>
+      LeandroDecidueye:
+      <a href="https://www.twitch.tv/leandrodecidueye" target="_blank" class="botao-link">Visitar canal</a>
+    </li>
+  </ul>
+</div>
     </section>
 
     <p style="text-align:center; margin-top: 2rem;">
