--- a/times.html
+++ b/times.html
@@ -61,6 +61,12 @@
       <a href="https://www.twitch.tv/leandrodecidueye" target="_blank" class="botao-link">Visitar canal</a>
     </li>
   </ul>
+  <ul>
+    <li>
+      Hiragimoi:
+      <a href="https://www.twitch.tv/hiragimoi" target="_blank" class="botao-link">Visitar canal</a>
+    </li>
+  </ul>
 </div>
     </section>
 
