--- a/times.html
+++ b/times.html
@@ -38,7 +38,7 @@
 
       <div class="time">
         <h3>Pokémon VGC</h3>
-        <p>Time especializado em batalhas estratégicas no circuito oficial do Video Game Championships (VGC).</p>
+        <p>Jogador especializado em batalhas estratégicas no circuito oficial do Video Game Championships (VGC).</p>
         <ul>
           <li>Jogador: Lobo</li>
         </ul>
@@ -46,9 +46,9 @@
 
       <div class="time">
         <h3>Yu-Gi-Oh! TCG</h3>
-        <p>Jogadores experientes no competitivo do card game de Yu-Gi-Oh!, participando de ligas e campeonatos.</p>
+        <p>Jogador experiente no competitivo do card game de Yu-Gi-Oh!, participando de ligas e campeonatos.</p>
         <ul>
-          <li>Jogadores em destaque: Yagami</li>
+          <li>Jogador: Yagami</li>
         </ul>
       </div>
 
