--- a/desempenho.html
+++ b/desempenho.html
@@ -2,11 +2,16 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Site oficial da equipe Guariní e-sport, desde 2019 unindo força, estratégia e paixão pelos games.">
   <title>Calculadora de Desempenho - Pokémon Unite</title>
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: #000000cc;
       padding: 20px;
       max-width: 800px;
       margin: auto;
