--- a/desempenho.html
+++ b/desempenho.html
@@ -8,10 +8,26 @@
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  </head>
+<body>
+  <header>
+    <h1>Guariní e-sport</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="times.html">Times</a></li>
+        <li><a href="loja.html">Loja</a></li>
+        <li><a href="desempenho.html" class="ativo">Desempenho</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #000000cc;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: url('background.jpg') no-repeat center center fixed;
+      background-size: cover;
       padding: 20px;
       max-width: 800px;
       margin: auto;
