--- a/sobre.html
+++ b/sobre.html
@@ -17,6 +17,7 @@
         <li><a href="sobre.html" class="ativo">Sobre</a></li>
         <li><a href="times.html">Times</a></li>
         <li><a href="loja.html">Loja</a></li>
+        <li><a href="desempenho.html">Desempenho</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
