--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="times.html">Times</a></li>
         <li><a href="loja.html">Loja</a></li>
+        <li><a href="desempenho.html">Desempenho</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
