--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="times.html">Times</a></li>
         <li><a href="loja.html">Loja</a></li>
-        <li><a href="desempenho.html">Desempenho</a></li>
+        <li><a href="desempenho.html">Calculadora</a></li>
         <li><a href="contato.html" class="ativo">Contato</a></li>
       </ul>
     </nav>
