--- a/desempenho.html
+++ b/desempenho.html
@@ -18,7 +18,7 @@
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="times.html">Times</a></li>
         <li><a href="loja.html">Loja</a></li>
-        <li><a href="desempenho.html" class="ativo">Desempenho</a></li>
+        <li><a href="desempenho.html" class="ativo">Calculadora</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
@@ -31,6 +31,8 @@
       padding: 20px;
       max-width: 800px;
       margin: auto;
+      color: #ffffff;
+      line-height: 1.6;
     }
     h2 {
       text-align: center;
