--- a/times.html
+++ b/times.html
@@ -17,7 +17,7 @@
         <li><a href="sobre.html">Sobre</a></li>
         <li><a href="times.html" class="ativo">Times</a></li>
         <li><a href="loja.html">Loja</a></li>
-        <li><a href="desempenho.html">Desempenho</a></li>
+        <li><a href="desempenho.html">Calculadora</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
