--- a/desempenho.html
+++ b/desempenho.html
@@ -23,46 +23,6 @@
       </ul>
     </nav>
   </header>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-      color: #ffffff;
-      line-height: 1.6;
-    }
-    h2 {
-      text-align: center;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input, select, textarea, button {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-    }
-    #imagemPokemon {
-      display: block;
-      margin: 10px auto;
-      width: 100px;
-      height: 100px;
-    }
-    #resultado {
-      margin-top: 20px;
-      padding: 15px;
-      background-color: #e0e0e0;
-      border-radius: 8px;
-      font-weight: bold;
-      white-space: pre-wrap;
-    }
-  </style>
-</head>
-<body>
 
 <section class="container calculadora">
   <h2 class="titulo-pagina">Calculadora de Desempenho - Pokémon Unite</h2>
@@ -264,5 +224,10 @@ function calcularDesempenhoCombinado(winRate, mvpWinRate, role) {
 
   </script>
 
+  <footer>
+    <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
+    <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
+    <p>Created by: Lobo</p>
+  </footer>
 </body>
 </html>
