--- a/desempenho.html
+++ b/desempenho.html
@@ -69,7 +69,7 @@
       "Garchomp", "Gardevoir", "Gengar", "Glaceon", "Goodra", "Greedent",
       "Greninja", "Gyarados", "Ho-Oh", "Hoopa", "Inteleon", "Lapras", "Latias", "Latios",
       "Leafeon", "Lucario", "Machamp", "Mamoswine", "Meowscarada", "Metagross", "Mew", "Mewtwo Y",
-      "Mewtwo X", "Mimikyu", "Miraidon", "Mr. Mime", "Ninetales", "Pikachu", "Psyduck", "Raichu", "Rapidash", "Sableye", "Scizor",
+      "Mewtwo X", "Mimikyu", "Miraidon", "Mr. Mime", "Ninetales", "Pawmot", "Pikachu", "Psyduck", "Raichu", "Rapidash", "Sableye", "Scizor",
       "Slowbro", "Snorlax", "Suicune", "Sylveon", "Talonflame", "Tinkaton", "Trevenant", "Tsareena",
       "Tyranitar", "Umbreon", "Urshifu", "Venusaur", "Wigglytuff", "Zacian", "Zeraora", "Zoroark"
     ];
