--- a/desempenho.html
+++ b/desempenho.html
@@ -24,6 +24,8 @@
     </nav>
   </header>
 
+<div class="calculadora-container">
+
 <section class="container calculadora">
   <h2 class="titulo-pagina">Calculadora de Desempenho - Pokémon Unite</h2>
 
@@ -60,6 +62,7 @@
 </section>
 
 <script src="calculadora.js"></script>
+</div>
 
   <footer>
     <p>&copy; 2025 Guariní e-sport. Todos os direitos reservados.</p>
