--- a/desempenho.html
+++ b/desempenho.html
@@ -49,7 +49,7 @@
   </select>
 
   <label for="dadosTexto">Cole os dados do site aqui:</label>
-  <textarea id="dadosTexto" rows="6" class="form-control" placeholder="Cole os dados brutos aqui..."></textarea>
+  <textarea id="dadosTexto" rows="6" class="form-control" placeholder="Cole os dados brutos do seu Pokémon no seu Unite API em Inglês aqui..."></textarea>
 
   <div class="botoes-calculadora">
     <button class="btn" onclick="carregarDados()">Carregar Dados</button>
