--- a/agenda.html
+++ b/agenda.html
@@ -1,95 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agenda de Treinos e Scrims</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Agenda Semanal</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background: #f4f4f4;
-  }
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  form {
-    margin-bottom: 20px;
-  }
-  label {
-    margin-right: 10px;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    background: white;
-  }
-  table, th, td {
-    border: 1px solid #ccc;
-  }
-  th, td {
-    padding: 8px;
-    text-align: left;
-  }
-  #scrimExtra {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 12px;
-    align-items: center;
-    margin-top: 10px;
-  }
-  #scrimExtra label {
-    display: flex;
-    flex-direction: column;
-    font-size: 14px;
-  }
-  button {
-    cursor: pointer;
+  body { font-family: Arial, sans-serif; background:#f4f4f4; padding:20px; }
+  h1,h2 { text-align:center; }
+  table { border-collapse:collapse; width:100%; background:white; margin-bottom:20px; }
+  th,td { border:1px solid #ccc; padding:8px; text-align:center; vertical-align:top; min-height:120px; }
+  th { background:#333; color:white; }
+  .atividade { display:flex; flex-direction:column; gap:6px; margin-bottom:8px; padding:6px; border-radius:6px; color:white; position:relative; }
+  .btns { margin-top:6px; display:flex; gap:6px; justify-content:flex-end; flex-wrap:wrap; }
+  .btns button { font-size:12px; padding:4px 8px; border:none; cursor:pointer; border-radius:4px; }
+  .btn-delete { background:#e53935; color:white; }
+  .btn-confirm { background:#43a047; color:white; }
+  .btn-copy { background:#1e88e5; color:white; }
+  .btn-result { background:#ff9800; color:white; }
+  /* cores */
+  .Livre { background:#4caf50; }
+  .Scrim { background:#d2a679; }
+  .Torneio { background:#e57373; }
+  .Reunião { background:#ba68c8; }
+  .PatchNote { background:#64b5f6; }
+  .VodReview { background:#2196f3; }
+  .Treino5stk { background:#0288d1; }
+  .TreinoDraft, .AnalisedeCall, .TreinodeMicro, .TreinodeMacro { background:#1976d2; }
+  /* histórico */
+  #historico { list-style: none; padding-left: 0; max-width: 100%; }
+  #historico li { background:white; padding:8px; margin:6px 0; border-radius:6px; border:1px solid #ddd; display:flex; justify-content:space-between; align-items:center; gap:10px; flex-wrap:wrap; }
+  #historico li .txt { flex:1; margin-right:10px; }
+  form label { display:inline-block; margin-right:10px; margin-bottom:8px; }
+  form select, form input { padding:4px; margin-left:6px; }
+  #scrimExtra { display:none; margin-top:10px; padding:10px; border:1px solid #ccc; background:#fff; border-radius:6px; }
+  #scrimExtra label { display:block; margin-bottom:8px; }
+  @media (max-width:800px){
+    table, thead, tbody, th, td, tr { display:block; }
+    th { text-align:left; }
+    td { margin-bottom:12px; min-height:auto; }
   }
 </style>
 </head>
 <body>
 
-<h1>Agenda de Treinos e Scrims</h1>
+<h1>Agenda Semanal</h1>
 
-<form id="agendaForm">
-  <label>
-    Data:
-    <input type="date" id="data" required>
-  </label>
-  <label>
-    Hora:
-    <input type="time" id="hora" required>
-  </label>
-  <label>
-    Atividade:
+<h2>Adicionar Atividade</h2>
+<form id="formAtividade">
+  <label>Data: <input type="date" id="data" required></label>
+  <label>Horário: <input type="time" id="horario" required></label>
+  <label>Atividade:
     <select id="atividade" required>
       <option value="">Selecione</option>
-      <option value="Treino">Treino</option>
+      <option value="Livre">Livre</option>
       <option value="Scrim">Scrim</option>
+      <option value="Torneio">Torneio</option>
+      <option value="Reunião">Reunião</option>
+      <option value="PatchNote">Patch Note</option>
+      <option value="VodReview">Vod Review</option>
+      <option value="Treino5stk">Treino 5 stk</option>
+      <option value="TreinoDraft">Treino de Draft</option>
+      <option value="AnalisedeCall">Analise de Call</option>
+      <option value="TreinodeMicro">Treino de Micro</option>
+      <option value="TreinodeMacro">Treino de Macro</option>
     </select>
   </label>
-  <label>
-    Participantes:
-    <input type="text" id="participantes">
+  <label>Responsável:
+    <select id="responsavel" required>
+      <option value="">Selecione</option>
+      <option value="Lobo">Lobo</option>
+      <option value="Shad">Shad</option>
+      <option value="K1ng">K1ng</option>
+      <option value="Leone">Leone</option>
+    </select>
+  </label>
+  <label>Participantes:
+    <select id="participantes" required>
+      <option value="">Selecione</option>
+      <option value="Staff">Staff</option>
+      <option value="Time">Time</option>
+      <option value="Todos">Todos</option>
+    </select>
   </label>
 
   <!-- Campos extras para Scrim -->
-  <div id="scrimExtra" style="display:none;">
-    <label>
-      Adversário:
-      <input type="text" id="adversario" placeholder="Nome do time">
+  <div id="scrimExtra">
+    <label>Adversário:
+      <select id="adversario"></select>
     </label>
-    <label>
-      Formato:
+    <label>Formato:
       <select id="formato">
         <option value="2x2">2x2</option>
         <option value="3x3">3x3</option>
       </select>
     </label>
-    <label>
-      Banimentos:
+    <label>Banimentos:
       <select id="banimentos">
         <option value="All Open">All Open</option>
       </select>
@@ -99,124 +104,260 @@
   <button type="submit">Adicionar</button>
 </form>
 
-<h2>Agenda</h2>
-<table id="agendaTable">
+<table>
   <thead>
     <tr>
-      <th>Data</th>
-      <th>Hora</th>
-      <th>Atividade</th>
-      <th>Participantes</th>
-      <th>Adversário</th>
-      <th>Formato</th>
-      <th>Banimentos</th>
-      <th>Ações</th>
+      <th>Segunda</th>
+      <th>Terça</th>
+      <th>Quarta</th>
+      <th>Quinta</th>
+      <th>Sexta</th>
+      <th>Sábado</th>
+      <th>Domingo</th>
     </tr>
   </thead>
-  <tbody></tbody>
+  <tbody>
+    <tr>
+      <td id="segunda"></td>
+      <td id="terca"></td>
+      <td id="quarta"></td>
+      <td id="quinta"></td>
+      <td id="sexta"></td>
+      <td id="sabado"></td>
+      <td id="domingo"></td>
+    </tr>
+  </tbody>
 </table>
 
-<h2>Histórico</h2>
-<table id="historicoTable">
-  <thead>
-    <tr>
-      <th>Data</th>
-      <th>Hora</th>
-      <th>Atividade</th>
-      <th>Participantes</th>
-      <th>Adversário</th>
-      <th>Formato</th>
-      <th>Banimentos</th>
-      <th>Ações</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
-</table>
+<h2>Histórico de Atividades Concluídas</h2>
+<ul id="historico"></ul>
 
 <script>
+const diasIdx = ["domingo","segunda","terca","quarta","quinta","sexta","sabado"];
+let agendaData = { segunda:[], terca:[], quarta:[], quinta:[], sexta:[], sabado:[], domingo:[] };
+let historico = [];
+
 const pokemons = [
-  "Absol", "Aegislash", "Alcremie", "Armarouge", "Azumarill", "Blastoise",
-  "Blaziken", "Blissey", "Buzzwole", "Ceruledge", "Chandelure", "Charizard",
-  "Cinderace", "Clefable", "Comfey", "Cramorant", "Crustle", "Darkrai", "Decidueye", "Delphox",
-  "Dodrio", "Dragapult", "Dragonite", "Duraludon", "Eldegoss", "Espeon", "Falinks",
-  "Garchomp", "Gardevoir", "Gengar", "Glaceon", "Goodra", "Greedent",
-  "Greninja", "Gyarados", "Ho-Oh", "Hoopa", "Inteleon", "Lapras", "Latias", "Latios",
-  "Leafeon", "Lucario", "Machamp", "Mamoswine", "Meowscarada", "Metagross", "Mew", "Mewtwo Y",
-  "Mewtwo X", "Mimikyu", "Miraidon", "Mr. Mime", "Ninetales", "Pawmot", "Pikachu", "Psyduck", "Raichu", "Rapidash", "Sableye", "Scizor",
-  "Slowbro", "Snorlax", "Suicune", "Sylveon", "Talonflame", "Tinkaton", "Trevenant", "Tsareena",
-  "Tyranitar", "Umbreon", "Urshifu", "Venusaur", "Wigglytuff", "Zacian", "Zeraora", "Zoroark"
+  "Absol","Aegislash","Alcremie","Armarouge","Azumarill","Blastoise","Blaziken","Blissey","Buzzwole","Ceruledge","Chandelure","Charizard",
+  "Cinderace","Clefable","Comfey","Cramorant","Crustle","Darkrai","Decidueye","Delphox","Dodrio","Dragapult","Dragonite","Duraludon","Eldegoss",
+  "Espeon","Falinks","Garchomp","Gardevoir","Gengar","Glaceon","Goodra","Greedent","Greninja","Gyarados","Ho-Oh","Hoopa","Inteleon","Lapras",
+  "Latias","Latios","Leafeon","Lucario","Machamp","Mamoswine","Meowscarada","Metagross","Mew","Mewtwo Y","Mewtwo X","Mimikyu","Miraidon",
+  "Mr. Mime","Ninetales","Pawmot","Pikachu","Psyduck","Raichu","Rapidash","Sableye","Scizor","Slowbro","Snorlax","Suicune","Sylveon","Talonflame",
+  "Tinkaton","Trevenant","Tsareena","Tyranitar","Umbreon","Urshifu","Venusaur","Wigglytuff","Zacian","Zeraora","Zoroark"
 ];
 
-const banimentosSelect = document.getElementById("banimentos");
-pokemons.forEach(p => {
-  const opt = document.createElement("option");
-  opt.value = p;
-  opt.textContent = p;
-  banimentosSelect.appendChild(opt);
-});
-
-document.getElementById("atividade").addEventListener("change", function() {
-  const scrimExtra = document.getElementById("scrimExtra");
-  const participantes = document.getElementById("participantes");
-  if (this.value === "Scrim") {
-    scrimExtra.style.display = "flex";
-    participantes.value = "Time";
-    participantes.readOnly = true;
-  } else {
-    scrimExtra.style.display = "none";
-    participantes.value = "";
-    participantes.readOnly = false;
-  }
-});
-
-document.getElementById("agendaForm").addEventListener("submit", function(e) {
-  e.preventDefault();
-  const data = document.getElementById("data").value;
-  const hora = document.getElementById("hora").value;
-  const atividade = document.getElementById("atividade").value;
-  const participantes = document.getElementById("participantes").value;
-  let adversario = "";
-  let formato = "";
-  let banimentos = "";
-
-  if (atividade === "Scrim") {
-    adversario = document.getElementById("adversario").value.trim();
-    formato = document.getElementById("formato").value;
-    banimentos = document.getElementById("banimentos").value;
-  }
-
-  const tbody = document.querySelector("#agendaTable tbody");
-  const tr = document.createElement("tr");
-  tr.innerHTML = `
-    <td>${data}</td>
-    <td>${hora}</td>
-    <td>${atividade}</td>
-    <td>${participantes}</td>
-    <td>${adversario}</td>
-    <td>${formato}</td>
-    <td>${banimentos}</td>
-    <td>
-      <button onclick="concluir(this)">Concluir</button>
-      <button onclick="this.closest('tr').remove()">Excluir</button>
-    </td>
-  `;
-  tbody.appendChild(tr);
-  this.reset();
-  document.getElementById("scrimExtra").style.display = "none";
-});
-
-function concluir(btn) {
-  const row = btn.closest("tr");
-  const historico = document.querySelector("#historicoTable tbody");
-  const newRow = row.cloneNode(true);
-  const actionsCell = newRow.querySelector("td:last-child");
-  actionsCell.innerHTML = `
-    <button onclick="this.closest('tr').remove()">Apagar</button>
-    <button onclick="location.href='scrims-result.html'">Cadastrar resultado</button>
-  `;
-  historico.appendChild(newRow);
-  row.remove();
+function getDiaSemanaId(dataStr) {
+  const p = dataStr.split("-");
+  const d = new Date(parseInt(p[0]), parseInt(p[1]) - 1, parseInt(p[2]));
+  return diasIdx[d.getDay()];
 }
+
+function createActivityDiv(activity, day) {
+  const div = document.createElement('div');
+  div.className = 'atividade ' + (activity.atividade ? activity.atividade.replace(/\s+/g,'') : '');
+  div.innerHTML = `<strong>${activity.data} ${activity.horario}</strong> - ${activity.atividade}
+    <br><small>Resp: ${activity.responsavel}</small>
+    <br><small>Part: ${activity.participantes}</small>`;
+  if(activity.atividade === "Scrim"){
+    div.innerHTML += `<br><small>Adv: ${activity.adversario} | Formato: ${activity.formato} | Ban: ${activity.banimentos}</small>`;
+  }
+  const btns = document.createElement('div');
+  btns.className = 'btns';
+
+  const btnDelete = document.createElement('button');
+  btnDelete.className = 'btn-delete';
+  btnDelete.textContent = 'Apagar';
+  btnDelete.onclick = () => { deleteActivity(activity.id, day); };
+
+  const btnConfirm = document.createElement('button');
+  btnConfirm.className = 'btn-confirm';
+  btnConfirm.textContent = 'Confirmar';
+  btnConfirm.onclick = () => { confirmActivity(activity.id, day); };
+
+  const btnCopy = document.createElement('button');
+  btnCopy.className = 'btn-copy';
+  btnCopy.textContent = 'Copiar';
+  btnCopy.onclick = () => { copyActivityToClipboard(activity); };
+
+  const btnResult = document.createElement('button');
+  btnResult.className = 'btn-result';
+  btnResult.textContent = 'Cadastrar resultado';
+  btnResult.onclick = () => { window.location.href = 'scrims-result.html'; };
+
+  btns.appendChild(btnDelete);
+  btns.appendChild(btnConfirm);
+  btns.appendChild(btnCopy);
+  if(activity.atividade === "Scrim") btns.appendChild(btnResult);
+  div.appendChild(btns);
+  return div;
+}
+
+function deleteActivity(id, day) {
+  agendaData[day] = agendaData[day].filter(a => a.id !== id);
+  renderDay(day);
+  saveToStorage();
+}
+
+function confirmActivity(id, day) {
+  const idx = agendaData[day].findIndex(a => a.id === id);
+  if (idx === -1) return;
+  const [activity] = agendaData[day].splice(idx, 1);
+  historico.unshift(activity);
+  renderDay(day);
+  renderHistorico();
+  saveToStorage();
+}
+
+function deleteFromHistorico(index){
+  historico.splice(index,1);
+  renderHistorico();
+  saveToStorage();
+}
+
+function copyActivityToClipboard(activity) {
+  let texto = `${activity.data} ${activity.horario} - ${activity.atividade} | Resp: ${activity.responsavel} | Part: ${activity.participantes}`;
+  if(activity.atividade === "Scrim"){
+    texto += ` | Adv: ${activity.adversario} | Formato: ${activity.formato} | Ban: ${activity.banimentos}`;
+  }
+  navigator.clipboard.writeText(texto).then(() => {
+    alert('Atividade copiada!');
+  });
+}
+
+function renderDay(day) {
+  const col = document.getElementById(day);
+  col.innerHTML = '';
+  agendaData[day].sort((a,b) => (a.horario || '').localeCompare(b.horario || ''));
+  agendaData[day].forEach(activity => {
+    col.appendChild(createActivityDiv(activity, day));
+  });
+}
+
+function renderHistorico() {
+  const ul = document.getElementById('historico');
+  ul.innerHTML = '';
+  historico.forEach((item, idx) => {
+    const li = document.createElement('li');
+    const txt = document.createElement('div');
+    txt.className = 'txt';
+    txt.textContent = `${item.data} ${item.horario} - ${item.atividade} (Resp: ${item.responsavel}, Part: ${item.participantes})`;
+    if(item.atividade === "Scrim"){
+      txt.textContent += ` Adv: ${item.adversario} | Formato: ${item.formato} | Ban: ${item.banimentos}`;
+    }
+    const btns = document.createElement('div');
+    btns.style.display = 'flex';
+    btns.style.gap = '6px';
+
+    const btnCopy = document.createElement('button');
+    btnCopy.className = 'btn-copy';
+    btnCopy.textContent = 'Copiar';
+    btnCopy.onclick = () => { navigator.clipboard.writeText(txt.textContent).then(()=>alert('Copiado!')); };
+
+    const btnDelete = document.createElement('button');
+    btnDelete.className = 'btn-delete';
+    btnDelete.textContent = 'Apagar';
+    btnDelete.onclick = () => { deleteFromHistorico(idx); };
+
+    btns.appendChild(btnCopy);
+    btns.appendChild(btnDelete);
+
+    li.appendChild(txt);
+    li.appendChild(btns);
+    ul.appendChild(li);
+  });
+}
+
+function saveToStorage() {
+  localStorage.setItem('agendaData', JSON.stringify(agendaData));
+  localStorage.setItem('historico', JSON.stringify(historico));
+}
+
+function loadFromStorage() {
+  const savedAgenda = JSON.parse(localStorage.getItem('agendaData'));
+  const savedHist = JSON.parse(localStorage.getItem('historico'));
+  if (savedAgenda) {
+    for (let k in agendaData) {
+      if (Array.isArray(savedAgenda[k])) agendaData[k] = savedAgenda[k];
+    }
+  }
+  if (Array.isArray(savedHist)) historico = savedHist;
+  for (let k of Object.keys(agendaData)) renderDay(k);
+  renderHistorico();
+}
+
+function loadAdversarios(){
+  const advSelect = document.getElementById('adversario');
+  advSelect.innerHTML = '';
+  const times = ["TeamA","TeamB","TeamC"]; // exemplo, substituir pelos times reais
+  times.forEach(t => {
+    const opt = document.createElement('option');
+    opt.value = t;
+    opt.textContent = t;
+    advSelect.appendChild(opt);
+  });
+}
+
+function loadBanimentos(){
+  const banSelect = document.getElementById('banimentos');
+  pokemons.forEach(p => {
+    const opt = document.createElement('option');
+    opt.value = p;
+    opt.textContent = p;
+    banSelect.appendChild(opt);
+  });
+}
+
+document.getElementById('atividade').addEventListener('change', function(){
+  if(this.value === "Scrim"){
+    document.getElementById('scrimExtra').style.display = 'block';
+    document.getElementById('participantes').value = "Time";
+  } else {
+    document.getElementById('scrimExtra').style.display = 'none';
+  }
+});
+
+document.getElementById('formAtividade').addEventListener('submit', function(e) {
+  e.preventDefault();
+  const data = document.getElementById('data').value;
+  const horario = document.getElementById('horario').value;
+  const atividade = document.getElementById('atividade').value;
+  const responsavel = document.getElementById('responsavel').value;
+  const participantes = document.getElementById('participantes').value;
+  let adversario="", formato="", banimentos="";
+
+  if(atividade === "Scrim"){
+    adversario = document.getElementById('adversario').value;
+    formato = document.getElementById('formato').value;
+    banimentos = document.getElementById('banimentos').value;
+  }
+
+  if (!data || !horario || !atividade) {
+    alert('Preencha todos os campos obrigatórios.');
+    return;
+  }
+
+  const dia = getDiaSemanaId(data);
+  if (agendaData[dia].length >= 6) {
+    alert('Máximo de 6 atividades por dia.');
+    return;
+  }
+
+  const activityObj = {
+    id: Date.now().toString(),
+    data, horario, atividade, responsavel, participantes,
+    adversario, formato, banimentos
+  };
+
+  agendaData[dia].push(activityObj);
+  renderDay(dia);
+  saveToStorage();
+  this.reset();
+  document.getElementById('scrimExtra').style.display = 'none';
+});
+
+loadBanimentos();
+loadAdversarios();
+loadFromStorage();
 </script>
 
 </body>
