SCRUM-001-shop-image

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
       <h2>Loja Oficial</h2>
       <div class="produtos">
         <div class="produto">
-          <img src="camisa.jpg" alt="Camisa Guariní">
+          <img src="./shop/camisa.jpg" alt="Camisa Guariní">
           <h3>Camisa Oficial</h3>
           <p>R$ 69,90</p>
           <button class="btn-comprar">Comprar</button>
         </div>
         <div class="produto">
-          <img src="bone.jpg" alt="Boné Guariní">
+          <img src="./shop/bone.jpg" alt="Boné Guariní">
           <h3>Boné Guariní</h3>
           <p>R$ 39,90</p>
           <button class="btn-comprar">Comprar</button>
         </div>
         <div class="produto">
-          <img src="mousepad.jpg" alt="Mousepad Guariní">
+          <img src="./shop/mousepad.jpg" alt="Mousepad Guariní">
           <h3>Mousepad Gamer</h3>
           <p>R$ 49,90</p>
           <button class="btn-comprar">Comprar</button>
