--- a/loja.html
+++ b/loja.html
@@ -27,21 +27,21 @@
     <h2>Loja Oficial Guariní</h2>
     <section class="produtos" style="background-color: rgba(0, 0, 0, 0.6); padding: 20px; border-radius: 10px; max-width: 900px; margin: auto;">
       <article class="produto">
-        <img src="camisa.jpg" alt="Camisa Oficial Guariní" />
+        <img src="./shop/camisa.jpg" alt="Camisa Oficial Guariní" />
         <h3>Camisa Oficial</h3>
         <p class="preco">R$ 69,90</p>
         <button type="button" class="btn-comprar">Comprar</button>
       </article>
 
       <article class="produto">
-        <img src="bone.jpg" alt="Boné Guariní" />
+        <img src="./shop/bone.jpg" alt="Boné Guariní" />
         <h3>Boné Guariní</h3>
         <p class="preco">R$ 39,90</p>
         <button type="button" class="btn-comprar">Comprar</button>
       </article>
 
       <article class="produto">
-        <img src="mousepad.jpg" alt="Mousepad Gamer Guariní" />
+        <img src="./shop/mousepad.jpg" alt="Mousepad Gamer Guariní" />
         <h3>Mousepad Gamer</h3>
         <p class="preco">R$ 49,90</p>
         <button type="button" class="btn-comprar">Comprar</button>
