--- a/index.html
+++ b/index.html
@@ -3,38 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Site oficial da equipe Guariní e-sport">
+  <meta name="description" content="Site oficial da equipe Guariní e-sport, desde 2019 unindo força, estratégia e paixão pelos games.">
   <title>Guariní e-sport</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <a id="topo"></a> <!-- Âncora para voltar ao topo -->
-  
   <header>
-    <div class="header-wrapper">
-      <nav class="nav-group left-nav">
-        <ul>
-          <li><a href="index.html" class="ativo">Início</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="times.html">Times</a></li>
-        </ul>
-      </nav>
-      
-      <div class="logo-center">
-        <a href="#topo" aria-label="Voltar ao topo"> <!-- Link para a âncora -->
-          <img src="./logos/Guarini.png" alt="Guariní e-sport" class="header-logo">
-        </a>
-      </div>
-      
-      <nav class="nav-group right-nav">
-        <ul>
-          <li><a href="loja.html">Loja</a></li>
-          <li><a href="desempenho.html">Calculadora</a></li>
-          <li><a href="contato.html">Contato</a></li>
-        </ul>
-      </nav>
-    </div>
+    <h1>Guariní e-sport</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="ativo">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="times.html">Times</a></li>
+        <li><a href="loja.html">Loja</a></li>
+        <li><a href="desempenho.html">Calculadora</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
