--- a/sobre.html
+++ b/sobre.html
@@ -9,33 +9,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <a id="topo"></a> <!-- Âncora para voltar ao topo -->
-  
-    <header>
-      <div class="header-wrapper">
-        <nav class="nav-group left-nav">
-          <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="sobre.html" class="ativo">Sobre</a></li>
-            <li><a href="times.html">Times</a></li>
-          </ul>
-        </nav>
-        
-        <div class="logo-center">
-          <a href="#topo" aria-label="Voltar ao topo"> <!-- Link para a âncora -->
-            <img src="./logos/Guarini.png" alt="Guariní e-sport" class="header-logo">
-          </a>
-        </div>
-        
-        <nav class="nav-group right-nav">
-          <ul>
-            <li><a href="loja.html">Loja</a></li>
-            <li><a href="desempenho.html">Calculadora</a></li>
-            <li><a href="contato.html">Contato</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+  <header>
+    <h1>Guariní e-sport</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html" class="ativo">Sobre</a></li>
+        <li><a href="times.html">Times</a></li>
+        <li><a href="loja.html">Loja</a></li>
+        <li><a href="desempenho.html">Calculadora</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
     <section class="sobre-missao">
