--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <a id="topo"></a>
-  
+
   <header>
     <div class="header-wrapper">
       <!-- Navegação Desktop - Esquerda -->
@@ -59,6 +59,8 @@
       </nav>
     </div>
   </header>
+
+   <a href="login.html" class="btn-login-topo">Login</a>
 
   <main>
     <section id="home" class="hero">
